add more bootstrap and try to get new panel in spot

--- a/index.html
+++ b/index.html
@@ -10,21 +10,21 @@
     <title>Weather Dashboard</title>
 </head>
 <body>
-    <header class="p-3 mb-2 bg-info text-white align-items-center">
-        <h1>Weather Dashboard</h1>
+    <header class="p-3 bg-info text-white">
+        <h1 class="text-center">Weather Dashboard</h1>
     </header>
 
     <main>
-        <section class="search-section bg-secondary text-white d-inline-flex p-4"> <!--search-panel -->
+        <section class="search-section bg-dark text-white d-inline-flex p-4"> <!--search-panel -->
             <div class="search-box">
                 <h3>Search for a City:</h3>
                 <form>
                     <div class="form-row align-items-center">
-                        <div class="col-8 search-input"> <!--search-field-->
+                        <div class="col-8 search-input"> <!--search-form/field-->
                             <label class="sr-only" for="cityName">City</label>
                             <input type="text" class="form-control" id="cityName" placeholder="Enter City">
                         </div>
-                        <div class="col-1 search-button-card"> <!--search-button-panel-->
+                        <div class="col-1 search-button-box"> <!--search-button-panel-->
                             <button type="submit" class="btn btn-primary" id="search-button"><i class="fa fa-search" aria-hidden="true"></i></button>
                         </div>
                     </div>
@@ -34,6 +34,9 @@
                     </div>
                 </form>
             </div>
+        </section>
+        <section>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Fugit ipsum laudantium sequi ipsa molestiae! Aut.</p>
         </section>
 
     </main>
