--- a/index.html
+++ b/index.html
@@ -3,114 +3,127 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css"
-        integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
+    <!-- <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" /> -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="./assets/css/style.css" />
     <title>Weather Dashboard</title>
 </head>
 
 <body>
-    <header class="p-3 bg-primary text-white">
-        <h1 class="text-center">Weather Dashboard</h1>
+    <header class="p-3 mb-2 bg-primary text-white header">
+        <h1>Weather Dashboard</h1>
     </header>
 
     <main>
-        <section class="search-section container-fluid">
-            <!--search-panel -->
-            <div class="row">
-                <div class="search-box col-3 p-3 bg-secondary text-white"> 
-                    <h2>Search for a City:</h2>
-                    <form>
-                        <div class="form-row align-items-center">
-                            <div class="search-input col-9">
-                                <!--search-form/field-->
-                                <label class="sr-only" for="cityName">City</label>
-                                <input type="text" class="form-control" id="cityName" placeholder="Enter City">
-                            </div>
-                            <div class="search-button-box">
-                                <!--search-button-panel-->
-                                <button type="submit" class="btn btn-primary" id="search-button"><i class="fa fa-search"
-                                        aria-hidden="true"></i></button>
-                            </div>
+        <section class="search-panel bg-secondary text-white w-25">
+            <div class="search-box">
+                <h3>Enter city name:</h3>
+                <form>
+                    <div class="form-row align-items-center">
+                        <div class="col-8 search-field">
+                            <label class="sr-only" for="cityName">City</label>
+                            <input type="text" class="form-control" id="cityName" placeholder="City Name">
                         </div>
-                        <div class="city-list-box">
-                            <ul class="list-group" id="city-list">
-                            </ul>
+                        <div class="col-3 search-button-panel ml-n2">
+                            <button type="submit" class="btn btn-primary" id="search-button"><i class="fa fa-search" aria-hidden="true"></i></button>
                         </div>
-                    </form>
-                </div>
-                <section id= "forecast-panel" class="col-9 mt-1 ml-1 row d-flex vh-100 justify-content-around">
-                    <!-- this is the container/row for the entire current and 5 day weather -->
-                    <!-- need to have 2 rows: top row is col-12 for current, bottom is split into 5 columns -->
-                    <div id="current-forecast" class="row col-12 border rounded border-dark flex-column">
-                        <h3 class="text-justify" id="city-name"><span id="cityHeader">Detroit</span>  (<span id="current-date">Oct 19th, 2022</span>)</h3>
-                        <a href=""></a>
-                        <ul class="list-unstyled mt-auto p-2">
-                            <li>Temp: </li>
-                            <li>Wind Speed: </li>
-                            <li>Humidity: </li>
-                        </ul>
                     </div>
-                    <div id="future-forecast0" class="future-panel row card-body rounded col-2 m-1 bg-secondary text-light">
-                        <p id="date-0">Day+1</p>
-                        <a href=""></a>
-                        <ul class="list-unstyled mt-auto">
-                            <li>Temp: </li>
-                            <li>Wind Speed: </li>
-                            <li>Humidity: </li>
-                        </ul>
+                    <div class="city-list-box">
+                        <ul class="list-group" id="city-list"></ul>
                     </div>
-                    <div id="future-forecast1" class="future-panel row card-body rounded col-2 m-1 bg-secondary text-light">
-                        <p id="date-1">Day+2</p>
-                        <a href=""></a>
-                        <ul class="list-unstyled mt-auto">
-                            <li>Temp: </li>
-                            <li>Wind Speed: </li>
-                            <li>Humidity: </li>
-                        </ul>
-                    </div>
-                    <div id="future-forecast2" class="future-panel row card-body rounded col-2 m-1 bg-secondary text-light">
-                        <p id="date-2">Day+3</p>
-                        <a href=""></a>
-                        <ul class="list-unstyled mt-auto">
-                            <li>Temp: </li>
-                            <li>Wind Speed: </li>
-                            <li>Humidity: </li>
-                        </ul>
-                    </div>
-                    <div id="future-forecast3" class="future-panel row card-body rounded col-2 m-1 bg-secondary text-light">
-                        <p id="date-3">Day+4</p>
-                        <a href=""></a>
-                        <ul class="list-unstyled mt-auto">
-                            <li>Temp: </li>
-                            <li>Wind Speed: </li>
-                            <li>Humidity: </li>
-                        </ul>
-                    </div>
-                    <div id="future-forecast4" class="future-panel row card-body rounded col-2 m-1 bg-secondary text-light">
-                        <p id="date-4">Day+5</p>
-                        <a href=""></a>
-                        <ul class="list-unstyled mt-auto">
-                            <li>Temp: </li>
-                            <li>Wind Speed: </li>
-                            <li>Humidity: </li>
-                        </ul>
-                    </div>                    
+                </form>
             </div>
         </section>
-        
+
+        <section class="results-panel">
+            <div class="current-conditions-panel">
+                <div class="name-block">
+                    <h3 id="city-name"></h3>
+                    <img src="" alt="" id="currentIcon">
+                </div>
+                <div>
+                    <p class="current-info" id="temperature"></p>
+                </div>
+                <div>
+                    <p class="current-info" id="humidity"></p>
+                </div>
+                <div>
+                    <p class="current-info" id="wind-speed"></p>
+                </div>
+            </div>
+            <div class="forecast-panel">
+                <h4>5-Day Forecast:</h4>
+                <div class="container">
+                    <div class="row">
+                        <div class="col">
+                            <div class="card">
+                                <div class="card-header">
+                                    <h5 id="day-0"></h5>
+                                </div>
+                                <div class="card-body">
+                                    <img src="" alt="" id="img-0">
+                                    <p class="card-text" id="temp-0"></p>
+                                    <p class="card-text" id="hum-0"></p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col">
+                            <div class="card">
+                                <div class="card-header">
+                                    <h5 id="day-1"></h5>
+                                </div>
+                                <div class="card-body">
+                                    <img src="" alt="" id="img-1">
+                                    <p class="card-text" id="temp-1"></p>
+                                    <p class="card-text" id="hum-1"></p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col">
+                            <div class="card">
+                                <div class="card-header">
+                                    <h5 id="day-2"></h5>
+                                </div>
+                                <div class="card-body">
+                                    <img src="" alt="" id="img-2">
+                                    <p class="card-text" id="temp-2"></p>
+                                    <p class="card-text" id="hum-2"></p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col">
+                            <div class="card">
+                                <div class="card-header">
+                                    <h5 id="day-3"></h5>
+                                </div>
+                                <div class="card-body">
+                                    <img src="" alt="" id="img-3">
+                                    <p class="card-text" id="temp-3"></p>
+                                    <p class="card-text" id="hum-3"></p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col">
+                            <div class="card">
+                                <div class="card-header">
+                                    <h5 id="day-4"></h5>
+                                </div>
+                                <div class="card-body">
+                                    <img src="" alt="" id="img-4">
+                                    <p class="card-text" id="temp-4"></p>
+                                    <p class="card-text" id="hum-4"></p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
 
-
-    <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"
-        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
-        crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-Fy6S3B9q64WdZWQUiU+q4/2Lc9npb8tCaSX9FK7E8HnRr0Jz8D6OP9dO5Vg3Q9ct"
-        crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
     <script src="./assets/js/script.js"></script>
 </body>
