--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" /> -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="./assets/css/style.css" />
@@ -26,7 +25,7 @@
                             <label class="sr-only" for="cityName">City</label>
                             <input type="text" class="form-control" id="cityName" placeholder="City Name">
                         </div>
-                        <div class="col-3 search-button-panel ml-n2">
+                        <div class="col-3 search-button-box ml-n2">
                             <button type="submit" class="btn btn-primary" id="search-button"><i class="fa fa-search" aria-hidden="true"></i></button>
                         </div>
                     </div>
@@ -37,29 +36,29 @@
             </div>
         </section>
 
-        <section class="results-panel">
-            <div class="current-conditions-panel">
+        <section class="results-panel w-75">
+            <div class="current-conditions-box">
                 <div class="name-block">
                     <h3 id="city-name"></h3>
                     <img src="" alt="" id="currentIcon">
                 </div>
                 <div>
-                    <p class="current-info" id="temperature"></p>
+                    <p class="current-data" id="temperature"></p>
                 </div>
                 <div>
-                    <p class="current-info" id="humidity"></p>
+                    <p class="current-data" id="humidity"></p>
                 </div>
                 <div>
-                    <p class="current-info" id="wind-speed"></p>
+                    <p class="current-data" id="wind-speed"></p>
                 </div>
             </div>
-            <div class="forecast-panel">
+            <div class="forecast-box">
                 <h4>5-Day Forecast:</h4>
                 <div class="container">
                     <div class="row">
                         <div class="col">
                             <div class="card">
-                                <div class="card-header">
+                                <div class="card-header bg-primary text-white">
                                     <h5 id="day-0"></h5>
                                 </div>
                                 <div class="card-body">
@@ -71,7 +70,7 @@
                         </div>
                         <div class="col">
                             <div class="card">
-                                <div class="card-header">
+                                <div class="card-header bg-primary text-white">
                                     <h5 id="day-1"></h5>
                                 </div>
                                 <div class="card-body">
@@ -83,7 +82,7 @@
                         </div>
                         <div class="col">
                             <div class="card">
-                                <div class="card-header">
+                                <div class="card-header bg-primary text-white">
                                     <h5 id="day-2"></h5>
                                 </div>
                                 <div class="card-body">
@@ -95,7 +94,7 @@
                         </div>
                         <div class="col">
                             <div class="card">
-                                <div class="card-header">
+                                <div class="card-header bg-primary text-white">
                                     <h5 id="day-3"></h5>
                                 </div>
                                 <div class="card-body">
@@ -107,7 +106,7 @@
                         </div>
                         <div class="col">
                             <div class="card">
-                                <div class="card-header">
+                                <div class="card-header bg-primary text-white">
                                     <h5 id="day-4"></h5>
                                 </div>
                                 <div class="card-body">
