afternoon progress, almost working JS, needs more debugging

--- a/index.html
+++ b/index.html
@@ -32,6 +32,9 @@
                     <div class="city-list-box">
                         <ul class="list-group" id="city-list"></ul>
                     </div>
+                    <div class="col-6 del-button-box mx-auto p-1">
+                        <button type="submit" class="btn btn-primary" id="del-button">Clear List</button>
+                    </div>
                 </form>
             </div>
         </section>
