morning progress, api working, need to fix response data to elements

--- a/index.html
+++ b/index.html
@@ -46,7 +46,10 @@
                     <img src="" alt="" id="currentIcon">
                 </div>
                 <div>
-                    <p class="current-data" id="temperature"></p>
+                    <p class="current-data" id="min-temperature"></p>
+                </div>
+                <div>
+                    <p class="current-data" id="max-temperature"></p>
                 </div>
                 <div>
                     <p class="current-data" id="humidity"></p>
@@ -66,7 +69,8 @@
                                 </div>
                                 <div class="card-body">
                                     <img src="" alt="" id="img-0">
-                                    <p class="card-text" id="temp-0"></p>
+                                    <p class="card-text" id="min-temp-0"></p>
+                                    <p class="card-text" id="max-temp-0"></p>
                                     <p class="card-text" id="hum-0"></p>
                                 </div>
                             </div>
@@ -78,7 +82,8 @@
                                 </div>
                                 <div class="card-body">
                                     <img src="" alt="" id="img-1">
-                                    <p class="card-text" id="temp-1"></p>
+                                    <p class="card-text" id="min-temp-1"></p>
+                                    <p class="card-text" id="max-temp-1"></p>
                                     <p class="card-text" id="hum-1"></p>
                                 </div>
                             </div>
@@ -90,7 +95,8 @@
                                 </div>
                                 <div class="card-body">
                                     <img src="" alt="" id="img-2">
-                                    <p class="card-text" id="temp-2"></p>
+                                    <p class="card-text" id="min-temp-2"></p>
+                                    <p class="card-text" id="max-temp-2"></p>
                                     <p class="card-text" id="hum-2"></p>
                                 </div>
                             </div>
@@ -102,7 +108,8 @@
                                 </div>
                                 <div class="card-body">
                                     <img src="" alt="" id="img-3">
-                                    <p class="card-text" id="temp-3"></p>
+                                    <p class="card-text" id="min-temp-3"></p>
+                                    <p class="card-text" id="max-temp-3"></p>
                                     <p class="card-text" id="hum-3"></p>
                                 </div>
                             </div>
@@ -114,7 +121,8 @@
                                 </div>
                                 <div class="card-body">
                                     <img src="" alt="" id="img-4">
-                                    <p class="card-text" id="temp-4"></p>
+                                    <p class="card-text" id="min-temp-4"></p>
+                                    <p class="card-text" id="max-temp-4"></p>
                                     <p class="card-text" id="hum-4"></p>
                                 </div>
                             </div>
