additional JS work on solving issues

--- a/index.html
+++ b/index.html
@@ -43,6 +43,8 @@
             <div class="current-conditions-box">
                 <div class="name-block">
                     <h3 id="city-name"></h3>
+                </div>
+                <div>
                     <img src="" alt="" id="currentIcon">
                 </div>
                 <div>
