testing complete for 6pm, want to test AM, mid-day, and late PM yet

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                         </div>
                     </div>
                     <div class="city-list-box">
-                        <ul class="list-group" id="city-list"></ul>
+                        <ul class="list-group col-8" id="city-list"></ul>
                     </div>
                     <div class="col-6 del-button-box mx-auto p-1">
                         <button type="submit" class="btn btn-primary" id="del-button">Clear List</button>
@@ -71,7 +71,6 @@
                                 </div>
                                 <div class="card-body">
                                     <img src="" alt="" id="img-0">
-                                    <p class="card-text" id="min-temp-0"></p>
                                     <p class="card-text" id="max-temp-0"></p>
                                     <p class="card-text" id="hum-0"></p>
                                 </div>
@@ -84,7 +83,6 @@
                                 </div>
                                 <div class="card-body">
                                     <img src="" alt="" id="img-1">
-                                    <p class="card-text" id="min-temp-1"></p>
                                     <p class="card-text" id="max-temp-1"></p>
                                     <p class="card-text" id="hum-1"></p>
                                 </div>
@@ -97,7 +95,6 @@
                                 </div>
                                 <div class="card-body">
                                     <img src="" alt="" id="img-2">
-                                    <p class="card-text" id="min-temp-2"></p>
                                     <p class="card-text" id="max-temp-2"></p>
                                     <p class="card-text" id="hum-2"></p>
                                 </div>
@@ -110,7 +107,6 @@
                                 </div>
                                 <div class="card-body">
                                     <img src="" alt="" id="img-3">
-                                    <p class="card-text" id="min-temp-3"></p>
                                     <p class="card-text" id="max-temp-3"></p>
                                     <p class="card-text" id="hum-3"></p>
                                 </div>
@@ -123,7 +119,6 @@
                                 </div>
                                 <div class="card-body">
                                     <img src="" alt="" id="img-4">
-                                    <p class="card-text" id="min-temp-4"></p>
                                     <p class="card-text" id="max-temp-4"></p>
                                     <p class="card-text" id="hum-4"></p>
                                 </div>
