completed CSS file and commenting

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                         </div>
                     </div>
                     <div class="city-list-box">
-                        <ul class="list-group col-8" id="city-list"></ul>
+                        <ul class="list-group col-8cd" id="city-list"></ul>
                     </div>
                     <div class="col-6 del-button-box mx-auto p-1">
                         <button type="submit" class="btn btn-primary" id="del-button">Clear List</button>
